--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
-  - gcloud auth activate-service-account travis-deployer@multi-k8s-287015.iam.gserviceaccount.com --key-file service-account.json
   - gcloud components update kubectl
+  - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project multi-k8s-287015
   - gcloud config set compute/zone europe-west1-b
   - gcloud container clusters get-credentials multi-cluster
